Update giao diện thông tin cá nhân khác hàng

--- a/admin/assets/css/pure-style-optimized.css
+++ b/admin/assets/css/pure-style-optimized.css
@@ -110,3 +110,6 @@ body {
 .material-icons.category:before { content: "📁"; }
 .material-icons.payments:before { content: "💰"; }
 .material-icons.receipt_long:before { content: "📝"; }
+.material-icons.chef:before { content: "👨"; }
+
+
