--- a/admin/assets/css/pure-style-optimized.css
+++ b/admin/assets/css/pure-style-optimized.css
@@ -148,9 +148,11 @@ td:nth-child(3) {
 /* Căn giữa các cột STT, Trạng thái, Hành động */
 td:nth-child(1),
 td:nth-child(3),
+td:nth-child(4),
 td:nth-child(5),
 th:nth-child(1),
 th:nth-child(3),
+th:nth-child(4),
 th:nth-child(5) {
   text-align: center;
   vertical-align: middle;
