update latest version from local

--- a/admin/assets/css/pure-style-optimized.css
+++ b/admin/assets/css/pure-style-optimized.css
@@ -824,7 +824,7 @@ td:nth-child(4) {
     }
 
     .modal button {
-      background-color: #1976d2;
+      background-color: #2D2D2D;
       color: #fff;
       padding: 10px 18px;
       border: none;
@@ -834,7 +834,7 @@ td:nth-child(4) {
     }
 
     .modal button:hover {
-      background-color: #2196f3;
+      background-color: #e88f2a;
     }
 
     .modal select {
